noinst_HEADERS = algorithm.h average_counter_impl.h cache_counter_impl.h cache_usage_counter_impl.h \
	tagged_cache_usage_counter_impl.h counter_impl.h default_request_response.h expect.h extension_list.h \
	hash.h hashmap.h loader.h lrucache.h param_factory.h parser.h \
	phoenix_singleton.h profiler.h simple_counter_impl.h state_node.h state_param_node.h \
	state_prefix_node.h xml_node.h
