noinst_HEADERS = algorithm.h average_counter_impl.h cache_counter_impl.h cache_usage_counter_impl.h \
	tagged_cache_usage_counter_impl.h counter_impl.h expect.h extension_list.h \
	hash.h hashmap.h loader.h lrucache.h param_factory.h \
	phoenix_singleton.h profiler.h simple_counter_impl.h parser.h request_impl.h response_time_counter_impl.h \
	response_time_counter_block.h vhost_arg_param.h
