pkginclude_HEADERS = algorithm.h args.h authorizer.h block.h \
	checking_policy.h config.h component.h context.h cookie.h encoder.h functors.h \
	extension.h resource_holder.h logger.h logger_factory.h object.h param.h \
	range.h request.h request_data.h response.h sanitizer.h script.h request_response.h \
	script_cache.h script_factory.h state.h state_value.h stylesheet.h \
	stylesheet_cache.h stylesheet_factory.h tag.h tagged_block.h \
	thread_pool.h threaded_block.h remote_tagged_block.h util.h xml_util.h vhost_data.h \
	writer.h xml.h xml_helpers.h xslt_extension.h checking_policy.h server.h \
	control_extension.h operation_mode.h \
	stat_builder.h counter_base.h average_counter.h simple_counter.h \
	status_info.h profiler.h xslt_profiler.h \
	memory_statistic.h cache_counter.h \
	doc_cache.h doc_cache_strategy.h
