pkginclude_HEADERS = algorithm.h args.h authorizer.h average_counter.h \
	block.h cache_counter.h cache_usage_counter.h tagged_cache_usage_counter.h component.h config.h context.h \
	control_extension.h cookie.h counter_base.h doc_cache.h \
	doc_cache_strategy.h encoder.h extension.h functors.h invoke_result.h logger_factory.h \
	logger.h memory_statistic.h object.h operation_mode.h param.h policy.h \
	profiler.h range.h remote_tagged_block.h request_data.h request.h \
	request_response.h resource_holder.h response.h sanitizer.h protocol.h \
	script_cache.h script_factory.h script.h server.h simple_counter.h \
	stat_builder.h state.h state_value.h status_info.h stylesheet_cache.h \
	stylesheet_factory.h stylesheet.h tagged_block.h tag.h threaded_block.h \
	thread_pool.h util.h string_utils.h vhost_data.h writer.h xml.h xml_helpers.h xml_util.h \
	xslt_extension.h xslt_profiler.h request_impl.h http_helper.h \
	validator.h validator_factory.h validator_exception.h refresher.h guard_checker.h \
	message_interface.h
